--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   equatable: ^2.0.7
   uuid: "4.5.1"
   image_picker: ^1.0.7
+  universal_html: ^2.2.4
   
   # Configuration
   yaml: "3.1.3"
