--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,14 @@ dependencies:
   get_it: ^8.0.3
   
   # Audio
-  flutter_sound: "9.27.0"
-  permission_handler: "11.0.0"
+  flutter_sound: "^9.28.0" # Réactivé pour remplacer flutter_audio_capture
+  # flutter_audio_capture: ^1.1.8 # INCOMPATIBLE avec l'intégration v2 - Supprimé
+  just_audio: ^0.9.36 # Ajouté pour la lecture audio
+  permission_handler: "^11.4.0"
+  permission_handler_android: "^12.1.0"
+  permission_handler_apple: "^9.4.6"
+  permission_handler_platform_interface: "^4.3.0"
+  permission_handler_windows: "^0.2.1"
   path_provider: "^2.1.5"
   path: "1.9.1"
   
@@ -60,6 +66,7 @@ dependencies:
   # Configuration
   yaml: "3.1.3"
   json_annotation: ^4.9.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +99,7 @@ flutter:
     - assets/animations/
     - assets/icons/
     - assets/config/
+    - .env
 
   # Fonts
   # fonts:
