--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,9 @@ dependencies:
   shimmer: "3.0.0"
 
   # Gestion d'état
-  flutter_bloc: ^9.1.0
-  provider: ^6.1.2
+  flutter_bloc: ^9.1.0 # Peut être supprimé si Riverpod est utilisé exclusivement
+  provider: ^6.1.2 # Peut être supprimé si Riverpod est utilisé exclusivement
+  flutter_riverpod: ^2.5.1 # Ajout de Riverpod
 
   # Injection de dépendances
   get_it: ^8.0.3
@@ -61,6 +62,7 @@ dependencies:
   intl: ^0.20.2
   logger: ^2.5.0
   equatable: ^2.0.7
+  fpdart: ^1.1.0 # Ajouté pour la programmation fonctionnelle (Either)
   uuid: "4.5.1"
   image_picker: ^1.0.7
   universal_html: ^2.2.4
@@ -84,6 +86,7 @@ dev_dependencies:
   json_serializable: ^6.9.4
   flutter_launcher_icons: ^0.14.3
   mockito: ^5.4.5
+  pigeon: ^19.0.2 # Ajouté pour la génération de code natif
 
 # Configurations du launcher icon
 flutter_launcher_icons:
