--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    ext.kotlin_version = '1.8.22' // Définir la version de Kotlin ici
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // Utiliser la version définie
+    }
+}
+
 allprojects {
     repositories {
         google()
