--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   # Stockage local
   shared_preferences: "2.2.0"
   sqflite: "2.4.2"
+  hive: ^2.2.3 # Ajouté pour le cache local
+  hive_flutter: ^1.1.0 # Ajouté pour l'intégration Flutter de Hive
 
   # Utils
   intl: ^0.20.2
@@ -83,7 +85,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14 # Rétrogradé pour compatibilité avec app_links 6.0.0
-  json_serializable: ^6.9.4
+  hive_generator: ^2.0.1 # Ajouté pour la génération de code Hive
+  json_serializable: ^6.9.0 # Rétrogradé pour résoudre le conflit avec hive_generator
   flutter_launcher_icons: ^0.14.3
   mockito: ^5.4.5
   pigeon: ^19.0.2 # Ajouté pour la génération de code natif
