Mise à jour du projet

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,31 +1,1 @@
-# Git
-.git/
-
-# Flutter/Dart build artifacts
-build/
-.dart_tool/
-eloquence_flutter/build/
-eloquence_flutter/.dart_tool/
-
-# Python virtual environments and cache
-.venv/
-.codegen/.venv/
-*.pyc
-__pycache__/
-
-# Node.js dependencies
-node_modules/
-
-# iOS/macOS build artifacts
-ios/Pods/
-ios/.symlinks/
-macos/build/
-
-# Linux/Windows/Web build artifacts
-linux/build/
-windows/build/
-web/build/
-
-# Logs and OS-specific files
-*.log
-.DS_Store
+<content of .dockerignore>
