--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,84 +1,1 @@
-plugins {
-    id "com.android.application"
-    id "kotlin-android"
-    // Add kotlinx-serialization plugin
-    id "org.jetbrains.kotlin.plugin.serialization" version "1.9.0" // Aligner avec la version Kotlin de Gradle
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
-    id "dev.flutter.flutter-gradle-plugin"
-}
-
-android {
-    namespace = "com.example.eloquence_flutter"
-    compileSdk = 35
-    ndkVersion = flutter.ndkVersion
-
-    // Redéfinir explicitement la compatibilité Java ET la toolchain Kotlin
-    compileOptions { // Revenir à 17
-        sourceCompatibility = JavaVersion.VERSION_17 
-        targetCompatibility = JavaVersion.VERSION_17 
-    }
-    kotlin { // Utiliser la toolchain Kotlin 17
-        jvmToolchain(17) 
-    }
-    // compileOptions { // Ancienne config commentée (21)
-    //     sourceCompatibility = JavaVersion.VERSION_21 
-    //     targetCompatibility = JavaVersion.VERSION_21 
-    // }
-    // kotlinOptions { // Ancienne config commentée (21)
-    //     jvmTarget = "21" 
-    // }
-
-
-    defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.eloquence_flutter"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = 24
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
-
-    buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
-        }
-    }
-
-    // Configuration pour compiler le code C++ avec CMake
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt" // Chemin vers notre fichier CMakeLists.txt
-            // Laisser Gradle utiliser la version CMake du SDK Android par défaut
-            // version "3.10.2" 
-        }
-    }
-}
-
-flutter {
-    source = "../.."
-}
-
-dependencies {
-    // Kotlin Standard Library (BOM supprimé pour simplifier, la version sera déduite du plugin)
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-
-    // Dépendances AndroidX essentielles
-    implementation "androidx.core:core-ktx:1.9.0" // Version spécifique pour la stabilité
-    implementation "androidx.annotation:annotation:1.7.1" // Version spécifique pour la stabilité
-
-    // Dépendance Azure Speech SDK
-    implementation("com.microsoft.cognitiveservices.speech:client-sdk:1.38.0")
-
-    // Les dépendances Flutter (flutter_embedding) sont normalement ajoutées automatiquement
-    // par le plugin dev.flutter.flutter-gradle-plugin. Ne pas les ajouter manuellement ici
-    // sauf si absolument nécessaire après d'autres diagnostics.
-
-    // Ajoutez ici d'autres dépendances Android si nécessaire
-
-    // Kotlinx Serialization JSON library
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3") // Mise à jour vers une version plus récente
-}
+<content of android/app/build.gradle>
