--- a/assets/config/app_config.json
+++ b/assets/config/app_config.json
@@ -1,44 +1,1 @@
-{
-  "app": {
-    "name": "Éloquence",
-    "version": "1.0.0",
-    "environment": "development"
-  },
-  "api": {
-    "url": "https://api.eloquence.example.com",
-    "timeout": 30000
-  },
-  "features": {
-    "darkMode": true,
-    "offlineMode": true,
-    "analytics": false
-  },
-  "exercise": {
-    "categories": [
-      {
-        "id": "respiration",
-        "name": "Respiration",
-        "description": "Exercices pour améliorer le souffle et la posture",
-        "icon": "lungs"
-      },
-      {
-        "id": "articulation",
-        "name": "Articulation",
-        "description": "Exercices pour une diction claire et précise",
-        "icon": "mouth"
-      },
-      {
-        "id": "voix",
-        "name": "Voix",
-        "description": "Exercices pour travailler sa voix et ses intonations",
-        "icon": "microphone"
-      },
-      {
-        "id": "scenarios",
-        "name": "Scénarios",
-        "description": "Entraînement sur des situations réelles",
-        "icon": "theater"
-      }
-    ]
-  }
-}
+<content of assets/config/app_config.json>
