--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,130 +1,1 @@
-name: eloquence_flutter
-description: Application de coaching vocal basée sur Flutter
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none'
-
-# Version + info de build
-version: 1.0.0+1
-
-environment:
-  sdk: '^3.7.0' # Format recommandé
-
-# Dépendances du projet
-dependencies:
-  flutter:
-    sdk: flutter
-
-  # Interface utilisateur
-  cupertino_icons: "1.0.8"
-  flutter_svg: ^2.0.17
-  google_fonts: ^6.2.1
-  fl_chart: ^0.70.2
-  lottie: ^3.3.1
-  shimmer: "3.0.0"
-
-  # Gestion d'état
-  flutter_bloc: ^9.1.0 # Peut être supprimé si Riverpod est utilisé exclusivement
-  provider: ^6.1.2 # Peut être supprimé si Riverpod est utilisé exclusivement
-  flutter_riverpod: ^2.5.1 # Ajout de Riverpod
-
-  # Injection de dépendances
-  get_it: ^8.0.3
-
-  # Audio
-  # flutter_sound: "^9.28.0" # Remplacé par record
-  record: ^5.0.5 # Ajouté pour l'enregistrement audio
-  just_audio: ^0.9.36 # Gardé pour la lecture audio
-  flutter_tts: ^4.2.2 # Ajouté pour le TTS natif offline
-  permission_handler: "^11.4.0"
-  permission_handler_android: "^12.1.0"
-  permission_handler_apple: "^9.4.6"
-  permission_handler_platform_interface: "^4.3.0"
-  permission_handler_windows: "^0.2.1"
-  path_provider: "^2.1.5"
-  path: "1.9.1"
-  wav: ^1.0.0 # Gardé pour lire les fichiers WAV
-
-  # Services en ligne
-  supabase_flutter: ^2.8.4
-  http: ^1.3.0
-  dio: ^5.8.0+1
-
-  # Navigation
-  go_router: ^14.8.1
-
-  # Stockage local
-  shared_preferences: "2.2.0"
-  sqflite: "2.4.2"
-  hive: ^2.2.3 # Ajouté pour le cache local
-  hive_flutter: ^1.1.0 # Ajouté pour l'intégration Flutter de Hive
-
-  # Utils
-  intl: ^0.20.2
-  logger: ^2.5.0
-  equatable: ^2.0.7
-  fpdart: ^1.1.0 # Ajouté pour la programmation fonctionnelle (Either)
-  uuid: "4.5.1"
-  image_picker: ^1.0.7
-  universal_html: ^2.2.4
-
-  # FFI (Supprimé car Whisper FFI n'est plus utilisé)
-  # ffi: ^2.1.2
-
-  # Configuration
-  yaml: "3.1.3"
-  json_annotation: ^4.9.0
-  flutter_dotenv: ^5.1.0
-  audio_signal_processor:
-    path: audio_signal_processor # Correct path relative to pubspec.yaml
-
-dev_dependencies:
-  # ffigen: ^11.0.0 # Supprimé car Whisper FFI n'est plus utilisé
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.4.14 # Rétrogradé pour compatibilité avec app_links 6.0.0
-  hive_generator: ^2.0.1 # Ajouté pour la génération de code Hive
-  json_serializable: ^6.9.0 # Rétrogradé pour résoudre le conflit avec hive_generator
-  flutter_launcher_icons: ^0.14.3
-  mockito: ^5.4.5
-  pigeon: ^19.0.2 # Ajouté pour la génération de code natif
-
-# Configurations du launcher icon
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/images/logo.png"
-  min_sdk_android: 21
-  web:
-    generate: true
-    image_path: "assets/images/logo.png"
-    background_color: "#6421f3"
-    theme_color: "#6421f3"
-
-# Configuration Flutter
-flutter:
-  uses-material-design: true
-
-  # Assets
-  assets:
-    - assets/images/
-    - assets/animations/
-    - assets/icons/
-    - assets/config/
-    - assets/lexique/ # Ajout du lexique syllabique
-    # - assets/models/ # Supprimé car Whisper FFI n'est plus utilisé
-    - .env
-
-  # Fonts
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-
-# Forcer une version spécifique d'une dépendance transitive - Section supprimée pour résoudre le conflit
-# dependency_overrides:
-#   app_links: 6.0.0
+<content of pubspec.yaml>
