--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,1 @@
-[submodule "native/whisper.cpp"]
-	path = native/whisper.cpp
-	url = https://github.com/ggerganov/whisper.cpp.git
+<content of .gitmodules>
