Implémentation du mode hors ligne pour Whisper et Piper TTS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,6 +123,8 @@ flutter:
     - assets/icons/
     - assets/config/
     - assets/lexique/
+    - assets/models/whisper/
+    - assets/models/piper/
     - .env
 
   # Fonts
