--- a/model_manager/pubspec.yaml
+++ b/model_manager/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.1.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
