--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -60,13 +60,11 @@ RUN git clone https://github.com/rhasspy/piper.git /tmp/piper \
 # Installer Kaldi GOP
 RUN git clone https://github.com/kaldi-asr/kaldi.git /tmp/kaldi \
     && cd /tmp/kaldi/tools \
-    # Installer OpenFST d'abord
-    && ./install_openfst.sh \
+    # Vérifier les dépendances d'abord
+    && extras/check_dependencies.sh \
     # Installer OpenBLAS
     && extras/install_openblas.sh \
-    # Vérifier les dépendances (maintenant que OpenFST et python-is-python3 sont là)
-    && extras/check_dependencies.sh \
-    # Construire le reste des outils
+    # Installer les outils (inclut OpenFST)
     && make -j$(nproc) \
     && cd /tmp/kaldi/src \
     && ./configure --shared --use-cuda=no \
