--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,7 @@
+# Étape 1 : Compilation Kaldi sur Ubuntu
 FROM ubuntu:22.04 AS kaldi-base
-
-# Éviter les interactions pendant l'installation
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Installer les dépendances de base
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     git \
@@ -22,23 +20,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     gfortran \
     && rm -rf /var/lib/apt/lists/*
 
-# Étape 1: Installation de Kaldi avec OpenFST compilé à partir des sources
 FROM kaldi-base AS kaldi-builder
 
-# Cloner Kaldi (avec --depth 1 pour accélérer)
 RUN git clone --depth 1 https://github.com/kaldi-asr/kaldi.git /opt/kaldi-src
 
-# Configurer les liens symboliques Python
 RUN cd /opt/kaldi-src/tools \
     && mkdir -p python \
     && ln -sf $(which python3) python/python3 \
     && ln -sf $(which python3) python/python
 
-# Installer OpenBLAS
 RUN cd /opt/kaldi-src/tools \
     && ./extras/install_openblas.sh
 
-# Installer OpenFST à partir des sources (version compatible)
 RUN cd /opt/kaldi-src/tools \
     && wget -O openfst-1.8.4.tar.gz https://www.openfst.org/twiki/pub/FST/FstDownload/openfst-1.8.4.tar.gz \
     && tar -xzf openfst-1.8.4.tar.gz \
@@ -48,26 +41,23 @@ RUN cd /opt/kaldi-src/tools \
     && make install \
     && ldconfig
 
-# Configurer et compiler Kaldi (uniquement les outils nécessaires)
 RUN cd /opt/kaldi-src/src \
     && ./configure --shared --use-cuda=no \
     && make -j$(nproc) depend \
     && cd bin \
     && make -j$(nproc) compute-gop text-to-phonemes
 
-# Image finale
-FROM ubuntu:22.04
+# Étape 2 : Image finale Node.js
+FROM node:18
 
-# Éviter les interactions pendant l'installation
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Installer les dépendances nécessaires pour l'exécution
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
     curl \
     wget \
     git \
     cmake \
-    build-essential \
     python3 \
     python3-pip \
     ffmpeg \
@@ -78,22 +68,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libatlas-base-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Installer Node.js 18.x et npm
-RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends nodejs \
-    && rm -rf /var/lib/apt/lists/*
+# Copier les bibliothèques OpenFST depuis l'étape de construction
+COPY --from=kaldi-builder /usr/local/lib/libfst* /usr/local/lib/
+COPY --from=kaldi-builder /usr/local/lib/fst /usr/local/lib/fst
+COPY --from=kaldi-builder /usr/local/include/fst /usr/local/include/fst
 
-# Créer un utilisateur non-root
-RUN useradd -m -s /bin/bash appuser
+RUN ldconfig
 
-# Créer les répertoires de travail
-WORKDIR /app
-RUN mkdir -p /app/models/whisper \
-    /app/models/piper \
-    /app/models/kaldi \
-    /app/models/llm \
-    && chown -R appuser:appuser /app
+# Copier les binaires Kaldi compilés depuis l'étape précédente
+COPY --from=kaldi-builder /opt/kaldi-src/src/bin/compute-gop /usr/local/bin/
+COPY --from=kaldi-builder /opt/kaldi-src/src/bin/text-to-phonemes /usr/local/bin/
 
 # Installer Whisper.cpp (avec --depth 1 pour accélérer)
 RUN git clone --depth 1 https://github.com/ggerganov/whisper.cpp.git /tmp/whisper.cpp \
@@ -109,40 +93,23 @@ RUN git clone --depth 1 https://github.com/rhasspy/piper.git /tmp/piper \
     && cp /tmp/piper/install/piper /usr/local/bin/ \
     && rm -rf /tmp/piper
 
-# Copier les bibliothèques OpenFST depuis l'étape de construction
-COPY --from=kaldi-builder /usr/local/lib/libfst* /usr/local/lib/
-COPY --from=kaldi-builder /usr/local/lib/fst /usr/local/lib/fst
-COPY --from=kaldi-builder /usr/local/include/fst /usr/local/include/fst
-
-# Mettre à jour le cache des bibliothèques dynamiques
-RUN ldconfig
-
-# Copier les binaires Kaldi compilés depuis l'étape précédente
-COPY --from=kaldi-builder /opt/kaldi-src/src/bin/compute-gop /usr/local/bin/
-COPY --from=kaldi-builder /opt/kaldi-src/src/bin/text-to-phonemes /usr/local/bin/
-
-# Installer llama.cpp (avec --depth 1 pour accélérer)
-RUN git clone --depth 1 https://github.com/ggerganov/llama.cpp.git /tmp/llama.cpp \
-    && cd /tmp/llama.cpp \
-    && make \
-    && cp /tmp/llama.cpp/main /usr/local/bin/llama-chat \
-    && rm -rf /tmp/llama.cpp
+WORKDIR /app
+RUN mkdir -p /app/models/whisper \
+    /app/models/piper \
+    /app/models/kaldi \
+    /app/models/llm
 
 # Copier les fichiers du projet
 COPY package*.json ./
 RUN npm ci
 
-# Copier le reste des fichiers
 COPY . .
 
 # Changer le propriétaire des fichiers
-RUN chown -R appuser:appuser /app
+RUN chown -R node:node /app
 
-# Passer à l'utilisateur non-root
-USER appuser
+USER node
 
-# Exposer le port
 EXPOSE 3000
 
-# Commande de démarrage
 CMD ["npm", "start"]
