--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -54,7 +54,7 @@ RUN mkdir -p /app/models/whisper \
     /app/models/llm
 
 # Copier les fichiers du projet
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN npm ci
 
 COPY . .
