--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 assets/models/*.bin filter=lfs diff=lfs merge=lfs -text
 assets/models/piper/*.onnx filter=lfs diff=lfs merge=lfs -text
 assets/models/whisper/*.bin filter=lfs diff=lfs merge=lfs -text
+*.opus filter=lfs diff=lfs merge=lfs -text
